# wumw

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  experiment_loop.md  experiments.md  loop.md  pr_review_benchmark.md  pyproject.toml  run_loop.sh  run_task_loop.sh  tasklist.md  wumw.md
scripts/: feature_impl_task.md  hidden_test_feature_impl.py  pr_review_ab.py
src/wumw/: analyze.py  benchmark.py  cli.py  compress.py  savings.py  session_logs.py  state.py  task_status.py
tests/: test_pr_review_ab.py  test_task_status.py  test_wumw.py
