[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wumw"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
wumw = "wumw.cli:main"
wumw-analyze = "wumw.analyze:main"
wumw-bench = "wumw.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
